# simplebot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml  release.yml
docs/: examples.md  index.md
src/simplebot/: __init__.py  core.py  personalities.py
tests/: __init__.py  test_core.py  test_personalities.py
